@@ -1,3 +1,7 @@
+- monitor-probe-using-X can now return EDIDs. if Xorg find an EDID (whereas
+  monitor-get-edid-using-vbe failed), defaults to "Plug'n Play" monitor (ie
+  let Xorg do things automatically) instead of good_default_monitor.
+
 Version 0.31 - 25 September 2007, by Thierry Vignaud
 
 - updated translation
